some style fix (padding-top, z-index) adding modal opacity transition

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,19 @@ body {
 
 /* --- GLOBAL STYLES --- */
 
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 200ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
 ::selection {
   background-color: var(--hl-color);
   color: var(--text-color);
