--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -8,10 +8,6 @@
   padding-bottom: var(--spacing);
 }
 
-.portfolio>* {
-  z-index: 2;
-}
-
 .projectCard {
   color: white;
   border-radius: 3px;
@@ -31,7 +27,6 @@
 
 .textWrap {
   transition: all 0.9s ease-in-out;
-  z-index: 1;
 }
 
 .projectLink {
@@ -70,9 +65,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
   opacity: 0.3;
   transition: opacity 0.3s ease-in-out;
+  z-index: 0;
 }
 
 .closeModal {
